--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
         mkdir opea
         cd opea
         echo "git clone"
-        git clone -b one_click_build_doc https://github.com/opea-project/docs.git
+        git clone https://github.com/opea-project/docs.git
         cd docs
         echo "build online doc"
         bash scripts/build.sh f
