--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ permissions: {}
 
 on:
   schedule:
-    - cron: "0 13 * * *"
+    - cron: "0 */1 * * *"
 
 jobs:
   build:
@@ -31,3 +31,5 @@ jobs:
         publish_dir: ./opea/opea-project.github.io
         publish_branch: main
         exclude_assets: ''
+        user_name: 'NeuralChatBot'
+        user_email: 'grp_neural_chat_bot@intel.com'
